--- a/macos/home/.config/kitty/kitty.conf
+++ b/macos/home/.config/kitty/kitty.conf
@@ -9,7 +9,8 @@ shell_integration no-cursor
 copy_on_select yes
 active_tab_font_style bold
 inactive_tab_font_style normal
-
+# 0 disables it; -1 enables it
+confirm_os_window_close 0
 hide_window_decorations titlebar-only
 transparency yes
 background_opacity 0.8
