--- a/ubuntu/home/.gitconfig
+++ b/ubuntu/home/.gitconfig
@@ -53,7 +53,7 @@ bclean = "!git branch --merged | grep -v '\\*' | xargs -r git branch -d"
 st = status -s
 cl = clone
 ci = commit
-co = checkout --autostash
+co = checkout
 br = branch
 r = reset
 cp = cherry-pick
