--- a/ubuntu/home/.config/espanso/match/base.yml
+++ b/ubuntu/home/.config/espanso/match/base.yml
@@ -7,7 +7,7 @@ matches:
       - name: output
         type: shell
         params:
-          cmd: "xdotool key ctrl+a && sleep 0.1 && xdotool key ctrl+x && sleep 0.1 && /home/mgreco/.local/bin/pbpaste > /tmp/espanso-nvim.txt && xterm -e nvim /tmp/espanso-nvim.txt && cat /tmp/espanso-nvim.txt"
+          cmd: "xdotool key ctrl+a && sleep 0.1 && xdotool key ctrl+x && sleep 0.1 && /home/mgreco/.local/bin/pbpaste > /tmp/espanso-nvim.txt && xterm -e bash -c 'source ~/.profile && nvim /tmp/espanso-nvim.txt && cat /tmp/espanso-nvim.txt'"
 
   - trigger: ":setup:"
     replace: "apt update -qq && apt install -qq -y curl && curl -#fLo- 'https://gist.github.com/mmngreco/ef7af0db1a9a70c0c73337f5788b0072/raw/setup-container.sh' | sh"
