update espanso macos

--- a/macos/home/.config/espanso/config/default.yml
+++ b/macos/home/.config/espanso/config/default.yml
@@ -5,6 +5,6 @@ backend: Auto
 search_shortcut: ALT+SHIFT+SPACE
 show_icon: true
 search_trigger: ",search"
-x11_use_xdotool_backend: true
+# x11_use_xdotool_backend: true
 # disable_x11_fast_inject: true
 undo_backspace: true
