--- a/macos/home/.config/espanso/match/base.yml
+++ b/macos/home/.config/espanso/match/base.yml
@@ -86,7 +86,7 @@ matches:
       - name: out
         type: shell
         params:
-          cmd: "pbpaste | ~/.local/bin/espanso_gpt"
+          cmd: "pbpaste | tr -d ';gp' | ~/.local/bin/espanso_gpt"
 
   - trigger: ";babel"
     replace: "{{out}}"
@@ -95,7 +95,7 @@ matches:
       - name: out
         type: shell
         params:
-          cmd: "pbpaste | ~/.local/bin/espanso_gpt_trad"
+          cmd: "pbpaste | tr -d ';babel' | ~/.local/bin/espanso_gpt_trad"
 
   - trigger: ";fix"
     replace: "{{out}}"
@@ -104,7 +104,7 @@ matches:
       - name: out
         type: shell
         params:
-          cmd: "pbpaste | ~/.local/bin/espanso_gpt_fix"
+          cmd: "pbpaste | tr -d ';fix' | ~/.local/bin/espanso_gpt_fix"
 
   - trigger: ";retro"
     force_clipboard: true
