--- a/macos/home/.gitconfig
+++ b/macos/home/.gitconfig
@@ -55,8 +55,8 @@
 
 	st = status -s
 	cl = clone
-	ci = commit
-	co = checkout
+	ci = "!f() { if [ $# -eq 0 ]; then gpt \"Generate commit message for: \n$(git diff --cached)\" | git commit -F -; else git commit $@; fi }; f"
+	co = "!f() { if [ $# -eq 0 ]; then git branch -a | grep -v HEAD | fzf | sed 's/.* //' | sed 's#remotes/[^/]*/##'; else git checkout $@; fi }; f"
 	br = branch
 	r = reset
 	cp = cherry-pick
